{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 72,
  "lineage": "452b5dc9-5887-5fbf-fc61-a8b68d2aac86",
  "resources": [
    {
      "module": "module.nginx_server-dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "module.nginx_server-dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-080c353f4798a202f",
            "arn": "arn:aws:ec2:us-east-1:718530840971:instance/i-0680e095d08381077",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0680e095d08381077",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx_server-dev-development-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0284b879cb46dd3ab"
              }
            ],
            "primary_network_interface_id": "eni-0284b879cb46dd3ab",
            "private_dns": "ip-172-31-28-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.181",
            "public_dns": "ec2-18-215-181-12.compute-1.amazonaws.com",
            "public_ip": "18.215.181.12",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ad813f7e76954ad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx_server-dev-development-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2139caf55aabb90",
            "tags": {
              "Environment": "development",
              "Name": "nginx_server-dev",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "nginx_server-dev",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f938a908a9c311e0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718530840971",
            "id": "i-0680e095d08381077",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_server-dev.aws_key_pair.nginx_server_ssh_key",
            "module.nginx_server-dev.aws_security_group.nginx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "module.nginx_server-dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718530840971:security-group/sg-0f938a908a9c311e0",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f938a908a9c311e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_server-dev-development-sg",
            "name_prefix": "",
            "owner_id": "718530840971",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "nginx_server-dev-SG",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "nginx_server-dev-SG",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6535660cb3de1f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718530840971",
            "id": "sg-0f938a908a9c311e0",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.nginx_server-qa",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "module.nginx_server-qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-080c353f4798a202f",
            "arn": "arn:aws:ec2:us-east-1:718530840971:instance/i-0b6fe0d9e9cf2b1c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6fe0d9e9cf2b1c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx_server-dev-qa-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06305bbe8131aaf80"
              }
            ],
            "primary_network_interface_id": "eni-06305bbe8131aaf80",
            "private_dns": "ip-172-31-28-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.30",
            "public_dns": "ec2-98-88-18-228.compute-1.amazonaws.com",
            "public_ip": "98.88.18.228",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-064ab89d032b90103",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx_server-dev-qa-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2139caf55aabb90",
            "tags": {
              "Environment": "qa",
              "Name": "nginx_server-dev",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "nginx_server-dev",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f127dfda7771e7b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718530840971",
            "id": "i-0b6fe0d9e9cf2b1c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nginx_server-qa.aws_key_pair.nginx_server_ssh_key",
            "module.nginx_server-qa.aws_security_group.nginx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server-qa",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "module.nginx_server-qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:718530840971:security-group/sg-00f127dfda7771e7b",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f127dfda7771e7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_server-dev-qa-sg",
            "name_prefix": "",
            "owner_id": "718530840971",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "qa",
              "Name": "nginx_server-dev-SG",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "nginx_server-dev-SG",
              "Team": "DevOps",
              "owner": "Jose Escalante",
              "project": "Terraform Practice"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6535660cb3de1f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718530840971",
            "id": "sg-00f127dfda7771e7b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}